add "pixels" endpoint
